--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hyjiacan/vue-slideout",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A Slide-Out component for Vue.js 2.0",
   "main": "index.js",
   "repository": {
@@ -26,6 +26,9 @@
   "dependencies": {
     "less": "^3.9.0",
     "less-loader": "^4.1.0"
+  },
+  "peerDependencies": {
+    "vue": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
