--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@hyjiacan/vue-slideout",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "description": "A Slide-Out component for Vue.js 2.0",
-  "main": "index.js",
+  "main": "./src/components/SlideOut/index.js",
+  "scripts": {
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "lint": "eslint --ext .js,.vue src",
+    "build": "node build/build.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hyjiacan/vue-slideout.git"
@@ -23,15 +29,13 @@
     "url": "https://github.com/hyjiacan/vue-slideout/issues"
   },
   "homepage": "https://github.com/hyjiacan/vue-slideout#readme",
-  "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+  "dependencies": {
+    "v-scroll-lock": "^1.0.1"
   },
   "peerDependencies": {
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "v-scroll-lock": "^1.0.1",
     "vue": "^2.0.0"
   },
   "devDependencies": {
@@ -64,6 +68,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
