--- a/package.json
+++ b/package.json
@@ -88,9 +88,9 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "webpack": "4.0.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "3.1.11",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
