--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@hyjiacan/vue-slideout",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "A Slide-Out component for Vue.js 2.0",
-  "main": "./src/components/SlideOut/index.js",
+  "main": "lib/slideout.common.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "serve": "npx vue-cli-service serve",
+    "build": "npx vue-cli-service build --target lib --dest=lib --formats=commonjs --name slideout ./src/components/SlideOut/index.js",
+    "build:docs": "npx vue-cli-service build --dest=docs",
+    "release": "yarn run lint & yarn run build & yarn run build:docs",
+    "lint": "npx vue-cli-service lint"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "license": "MIT",
   "files": [
     "docs",
+    "lib",
     "src",
     "types"
   ],
@@ -28,78 +30,24 @@
   "bugs": {
     "url": "https://github.com/hyjiacan/vue-slideout/issues"
   },
-  "homepage": "https://github.com/hyjiacan/vue-slideout#readme",
+  "homepage": "https://hyjiacan.github.io/vue-slideout/",
   "dependencies": {
-    "v-scroll-lock": "^1.0.1"
-  },
-  "peerDependencies": {
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
     "v-scroll-lock": "^1.0.1",
-    "vue": "^2.0.0"
+    "core-js": "^2.6.5",
+    "element-ui": "^2.8.2",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "@vue/cli": "^3.7.0",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.5.8",
-    "vue": "^2.6.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "4.0.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "3.1.11",
-    "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.5.21"
+  }
 }
