add auto update version tool while run build command

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/slideout.common.js",
   "scripts": {
     "serve": "npx vue-cli-service serve",
-    "build": "npx vue-cli-service build --target lib --dest=lib --formats=commonjs --name slideout ./src/components/SlideOut/index.js",
+    "build": "node version.js & npx vue-cli-service build --target lib --dest=lib --formats=commonjs --name slideout ./src/components/SlideOut/index.js",
     "build:docs": "npx vue-cli-service build --dest=docs",
     "release": "yarn run lint & yarn run build & yarn run build:docs",
     "lint": "npx vue-cli-service lint"
