--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 script: npm run release
 node_js: node
+deploy:
+    provider: npm
+    email: "hyjiacan@163.com"
+    api_key: ""
+    skip_cleanup: true
+    on:
+        tags: true
