Modified   package.json

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "lib/slideout.common.js",
   "scripts": {
     "serve": "npx vue-cli-service serve",
-    "build": "node version.js & npx vue-cli-service build --target lib --dest=lib --formats=commonjs --name slideout src/components/index.js",
+    "build": "npx vue-cli-service build --target lib --dest=lib --formats=commonjs --name slideout src/components/index.js",
     "build:docs": "npx vue-cli-service build --dest=docs",
-    "release": "yarn run lint & yarn run build & yarn run build:docs",
+    "release": "yarn run lint & yarn run build & yarn run build:docs & node version.js",
     "lint": "npx vue-cli-service lint",
     "test": "npx vue-cli-service lint & npx vue-cli-service build"
   },
