--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hyjiacan/vue-slideout",
-  "version": "2.5.7",
+  "version": "3.0.0-beta1",
   "description": "A Slide-Out component for Vue.js 2.0",
   "main": "lib/slideout.common.js",
   "unpkg": "lib/slideout.umd.js",
