remove lib dir from repo fix npm-registry

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.com"
+    "registry": "https://registry.npmjs.org"
   },
   "bugs": {
     "url": "https://github.com/hyjiacan/vue-slideout/issues"
