--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "vue": "^2.6.10",
-    "vue-template-compiler": "^2.5.21"
+    "vue": "2.6.10",
+    "vue-template-compiler": "2.6.10"
   }
 }
